[project]
name = "project1-khilalov-muslim-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Muslim Khilalov",email = "hilalov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.scripts]
project = "labyrinth_game.main:main"

[tool.poetry]
packages = [
    { include = "labyrinth_game" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.3,<0.15.0)"
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
